added return to main page for danger.html

--- a/templates/danger.html
+++ b/templates/danger.html
@@ -15,5 +15,11 @@
         <h1>The link is dangerous</h1>
         <p>It's best to avoid this site. If you believe this is an error, proceed with caution</p>
     </div>
+
+<form action="/" method="post">
+		<label for="another">Want to try another link?</label>
+		<button type="return">Return to Phishtales</button>
+	</form>
+
 </body>
 </html>
