added return to main page for safe.html

--- a/templates/safe.html
+++ b/templates/safe.html
@@ -15,5 +15,11 @@
         <h1>The link is safe</h1>
         <p>You may safely proceed</p>
     </div>
+
+<form action="/" method="post">
+		<label for="another">Want to try another link?</label>
+		<button type="return">Return to Phishtales</button>
+	</form>
+
 </body>
 </html>
