Made the button functional by returning to the main page, index.html

--- a/templates/safe.html
+++ b/templates/safe.html
@@ -16,9 +16,9 @@
         <p>You may safely proceed</p>
     </div>
 
-<form action="/" method="post">
+<form action="index.html" method="get">
 		<label for="another">Want to try another link?</label>
-		<button type="return">Return to Phishtales</button>
+		<button type="submit">Return to Phishtales</button>
 	</form>
 
 </body>
