--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,18 @@
 </head>
 <body>
     
-  <a href="https://github.com/cis3296s23/applebaum-projects-phishtales" class="share github">
+
+
+   <div class="about-project">
+    
+   <a href="https://github.com/cis3296s23/applebaum-projects-phishtales" class="share github">
     <svg role="presentation" class="svg--icon">
       <use xlink:href="#svg--github" />
     </svg>
   </a>
+  <p>About</p>
+    
+  </div>
 
 
    <h1>PhishTales</h1>
