linked the about page

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,18 +17,17 @@
 
 </head>
 <body>
-    
-
-
-   <div class="about-project">
-    
+ 
+<div class="about-project">
    <a href="https://github.com/cis3296s23/applebaum-projects-phishtales" class="share github">
     <svg role="presentation" class="svg--icon">
       <use xlink:href="#svg--github" />
     </svg>
   </a>
-  <p>About</p>
-    
+   
+  <div class="about-container">
+    <a href="{{ url_for('about_project') }}" class="about-link">About Project</a>
+  </div>
   </div>
 
 
