--- a/static/style.css
+++ b/static/style.css
@@ -133,10 +133,28 @@ button:hover::before, button:hover::after, button:focus::before, button:focus::a
   font-size: 24px;
 }
 
-
-
 .github-logo {
   width: 32px;
   height: 32px;
   background-color: aquamarine;
+}
+
+
+.about-container {
+  text-align: center;
+}
+
+.about-link {
+  display: inline-block;
+  font-size: 24px;
+  text-decoration: none;
+  border: 2px solid #333;
+  padding: 10px 20px;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+
+.about-link:hover {
+  background-color: #333;
+  color: #f5f5f5;
 }
