--- a/extension/style.css
+++ b/extension/style.css
@@ -100,6 +100,10 @@ button {
 		transition: background-color 0.3s ease-in-out;
 		width: 90%;
 	}
+	.button2:hover {
+		background-color: #474747;
+	}
+
 	.fabutton {
 		text-align: center;
 		display: inline-block;
@@ -114,6 +118,10 @@ button {
 		padding: 10px 20px;
 		transition: background-color 0.3s ease-in-out;
 		width: 20%;
+	}
+	
+	.fabutton:hover {
+		color: #474747;
 	}
 
 	.center {
